Minimal work, really just setting up framework

--- a/custom-connections/tsconfig.app.json
+++ b/custom-connections/tsconfig.app.json
@@ -15,6 +15,16 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Paths */
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@constants/*": ["constants/*"],
+      "@pages/*": ["pages/*"],
+      "@styles/*": ["assets/styles/*"],
+      "@utils/*": ["utils/*"],
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
