--- a/custom-connections/tsconfig.json
+++ b/custom-connections/tsconfig.json
@@ -3,5 +3,16 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "outDir": "dist",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@constants/*": ["constants/*"],
+      "@pages/*": ["pages/*"],
+      "@styles/*": ["assets/styles/*"],
+      "@utils/*": ["utils/*"],
+    }
+  }
 }
