--- a/custom-connections/tsconfig.json
+++ b/custom-connections/tsconfig.json
@@ -1,18 +1,32 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ],
-  "compilerOptions": {
-    "baseUrl": "./src",
-    "outDir": "dist",
-    "paths": {
-      "@components/*": ["components/*"],
-      "@constants/*": ["constants/*"],
-      "@pages/*": ["pages/*"],
-      "@styles/*": ["assets/styles/*"],
-      "@utils/*": ["utils/*"],
+    "files": [],
+    "references": [
+        {
+            "path": "./tsconfig.app.json"
+        },
+        {
+            "path": "./tsconfig.node.json"
+        }
+    ],
+    "compilerOptions": {
+        "baseUrl": "./src",
+        "outDir": "dist",
+        "paths": {
+            "@components/*": [
+                "components/*"
+            ],
+            "@constants/*": [
+                "constants/*"
+            ],
+            "@pages/*": [
+                "pages/*"
+            ],
+            "@styles/*": [
+                "assets/styles/*"
+            ],
+            "@utils/*": [
+                "utils/*"
+            ],
+        }
     }
-  }
 }
