Use FLIP to move tiles when the user guesses correctly. Adds highlighting for editor, and hopefully later the solution

--- a/custom-connections/package.json
+++ b/custom-connections/package.json
@@ -15,6 +15,7 @@
         "@mui/material": "^7.0.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-flip-toolkit": "^7.2.4",
         "react-router-dom": "^7.4.1"
     },
     "devDependencies": {
