Move creator logic out to a hook, and keep only rendering logic to page/components

--- a/custom-connections/tsconfig.json
+++ b/custom-connections/tsconfig.json
@@ -27,6 +27,9 @@
             "@utils/*": [
                 "utils/*"
             ],
+            "@hooks/*": [
+                "hooks/*"
+            ],
         }
     }
 }
