--- a/custom-connections/tsconfig.app.json
+++ b/custom-connections/tsconfig.app.json
@@ -35,6 +35,9 @@
             "@utils/*": [
                 "utils/*"
             ],
+            "@hooks/*": [
+                "hooks/*"
+            ],
         },
         /* Linting */
         "strict": true,
