Add ssh to dev container. Start work to allow saving partially created games.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,9 @@
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     "forwardPorts": [
         3000
+    ],
+    "mounts": [
+        "source=${env:HOME}${env:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind"
     ]
     // Use 'postCreateCommand' to run commands after the container is created.
     // "postCreateCommand": "uname -a",
