--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,12 +3,7 @@
 {
     "name": "Ubuntu",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-    "image": "mcr.microsoft.com/devcontainers/base:jammy",
-    "features": {
-        "ghcr.io/devcontainers-extra/features/node-asdf:0": {
-            "version": "22.14.0"
-        }
-    },
+    "image": "mcr.microsoft.com/devcontainers/typescript-node",
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     "forwardPorts": [
         3000
