--- a/custom-connections/package.json
+++ b/custom-connections/package.json
@@ -33,6 +33,7 @@
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.24.1",
         "vite": "^6.2.0",
+        "vite-plugin-node-polyfills": "^0.23.0",
         "vite-tsconfig-paths": "^5.1.4"
     }
 }
