--- a/custom-connections/package.json
+++ b/custom-connections/package.json
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.14.0",
         "@mui/material": "^7.0.1",
         "react": "^19.0.0",
+        "react-confetti": "^6.4.0",
         "react-dom": "^19.0.0",
         "react-flip-toolkit": "^7.2.4",
         "react-router-dom": "^7.4.1"
