--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,8 +15,10 @@
         "vscode": {
             "extensions": [
                 "dbaeumer.vscode-eslint",
-                "ms-azuretools.vscode-docker",
-                "docker.docker"
+                "docker.docker",
+                "ms-azuretools.vscode-containers",
+                "rust-lang.rust-analyzer",
+                "fill-labs.dependi"
             ]
         }
     },
@@ -26,11 +28,9 @@
             "moby": "true",
             "installDockerBuildx": "true"
         }
-    }
-    // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "uname -a",
-    // Configure tool-specific properties.
-    // "customizations": {},
-    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-    // "remoteUser": "root"
+    },
+    // Install Cargo when the devcontainer is made
+    "onCreateCommand": "curl https://sh.rustup.rs -sSf | sh -s -- -y",
+    // Install Cargo dependencies after the devcontainer is made
+    "postCreateCommand": ". $HOME/.cargo/env && cargo install aftman"
 }
