Do some validation on incoming data.

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,5 +1,10 @@
+# Read by the code to construct the database URL
 DB_USERNAME=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 DB_NAME=
+
+# This is needed for dev work, since cargo will try and talk
+# to the database and make sure the tables are set up properly.
+DATABASE_URL=mysql://<user>:<pass>@<host>:<port>/<database>
