--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"] }
+base64 = "0.22.1"
 dotenv = "0.15.0"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
 tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
 tower-http = { version = "0.6.4", features = ["fs"] }
