--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,6 +11,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
 tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
-tower-http = { version = "0.6.4", features = ["fs"] }
+tower-http = { version = "0.6.4" }
 tracing-subscriber = "0.3.19"
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
